# ragu

./: Cargo.toml  justfile
.claude/book-review/: standards.md
.claude/review-shared/: surface-placement.md  writing.md
.claude/skills/clean-circuits/: SKILL.md
.claude/skills/fv-docs/: SKILL.md
.claude/skills/fv-review/: SKILL.md
.github/: dependabot.yml
.github/actions/rust-setup/: action.yml
.github/scripts/: extract-regressions.jq  format-regressions.jq
.github/workflows/: bench.yml  debug.yml  fuzz-cron.yml  fv.yml  lint.yml  rust.yml  vet.yml
book/: FIXME.md  book.toml  macros.txt
book/src/: SUMMARY.md  introduction.md
book/src/appendix/: cs.md  related.md  snarks.md  terminology.md
book/src/design/: mesh.md
book/src/design/circuits/: constraints.md
book/src/guide/: configuration.md  getting_started.md  routines.md  troubleshooting.md  writing_circuits.md
book/src/guide/drivers/: concrete.md  index.md  linear.md  simulator.md  witness.md
book/src/guide/gadgets/: consistent.md  conversion.md  demotion.md  gadgetkind.md  index.md
book/src/guide/primitives/: allocation.md  index.md  merkle.md  simulator.md
book/src/implementation/: arch.md  circuits.md  polynomials.md  staging.md
book/src/implementation/drivers/: custom.md
book/src/protocol/core/: arithmetization.md  nark.md
crates/ragu_arithmetic/: Cargo.toml
crates/ragu_arithmetic/benches/: arithmetic.rs
crates/ragu_arithmetic/benches/criterion/: fft.rs  msm.rs
crates/ragu_arithmetic/benches/setup/: mod.rs
crates/ragu_arithmetic/src/: coeff.rs  deferred.rs  domain.rs  fft.rs  lib.rs  util.rs
crates/ragu_circuits/: Cargo.toml
crates/ragu_circuits/benches/: circuits.rs
crates/ragu_circuits/benches/setup/: mod.rs
crates/ragu_circuits/src/: floor_planner.rs  horner.rs  ky.rs  lib.rs  mesh.rs  metrics.rs  raw.rs  registry.rs  rx.rs  trace.rs  trivial.rs
crates/ragu_circuits/src/polynomials/: mod.rs  structured.rs  txz.rs  unstructured.rs
crates/ragu_circuits/src/polynomials/sparse/: mod.rs  tests.rs  view.rs
crates/ragu_circuits/src/s/: common.rs  mod.rs  sx.rs  sxy.rs  sy.rs
crates/ragu_circuits/src/staging/: bonding.rs  builder.rs  mask.rs  mod.rs  object.rs  rx_driver.rs
crates/ragu_circuits/src/tests/: identity.rs  mod.rs  segment_order.rs
crates/ragu_circuits/src/wiring/: common.rs  mod.rs  sx.rs  sxy.rs  sy.rs
crates/ragu_core/: Cargo.toml
crates/ragu_core/src/: convert.rs  drivers.rs  gadgets.rs  routines.rs
crates/ragu_gadgets/: Cargo.toml
crates/ragu_macros/src/: lib.rs  path_resolution.rs
crates/ragu_pasta/: Cargo.toml  build.rs  pasta_common.rs
crates/ragu_pasta/src/: lib.rs  macros.rs  poseidon_fp.rs  poseidon_fq.rs
crates/ragu_pcd/: Cargo.toml
crates/ragu_pcd/benches/criterion/: registry.rs
crates/ragu_pcd/src/: fuse.rs  fuzz_utils.rs  header.rs  lib.rs  merge.rs  proof.rs  step.rs  verify.rs
crates/ragu_pcd/src/circuits/: compute_v.rs  dummy.rs  full_collapse.rs  hashes_1.rs  hashes_2.rs  mod.rs  partial_collapse.rs  stages.rs  test_params.rs  tests.rs
crates/ragu_pcd/src/circuits/native/: compute_v.rs  hashes_1.rs  partial_collapse.rs  unified.rs
crates/ragu_pcd/src/circuits/native/stages/: eval.rs  query.rs
crates/ragu_pcd/src/circuits/nested/: mod.rs
crates/ragu_pcd/src/circuits/stages/native/: error_m.rs  error_n.rs  eval.rs  query.rs
crates/ragu_pcd/src/components/: claim_builder.rs  compute_c.rs  endoscalar.rs  fold_revdot.rs  horner.rs  ky.rs  mod.rs  transcript.rs
crates/ragu_pcd/src/components/claims/: mod.rs  native.rs
crates/ragu_pcd/src/fuse/: _01_application.rs  _02_preamble.rs  _03_s_prime.rs  _04_error_m.rs  _04_errors.rs  _04_inner_error.rs  _05_ab.rs  _05_error_n.rs  _05_outer_error.rs  _06_ab.rs  _06_query.rs  _07_f.rs  _07_query.rs  _08_eval.rs  _08_f.rs  _09_eval.rs  _09_p.rs  _10_p.rs  _11_circuits.rs  claims.rs  mod.rs
crates/ragu_pcd/src/internal/: claims.rs  endoscalar.rs  fold_revdot.rs  mod.rs  suffix.rs  tests.rs  transcript.rs
crates/ragu_pcd/src/internal/native/: claims.rs  mod.rs  unified.rs
crates/ragu_pcd/src/internal/native/circuits/: compute_v.rs  full_collapse.rs  hashes_1.rs  hashes_2.rs  mod.rs  partial_collapse.rs
crates/ragu_pcd/src/internal/native/stages/: error_m.rs  error_n.rs  eval.rs  inner_error.rs  mod.rs  outer_error.rs  preamble.rs  query.rs
crates/ragu_pcd/src/internal/nested/: claims.rs  mod.rs
crates/ragu_pcd/src/internal/nested/circuits/: copying.rs  loading.rs
crates/ragu_pcd/src/internal/nested/stages/: preamble.rs
crates/ragu_pcd/src/internal_circuits/: c.rs  compute_c.rs  compute_v.rs  hashes_1.rs  hashes_2.rs  ky.rs  mod.rs  stages.rs  unified.rs  v.rs
crates/ragu_pcd/src/internal_circuits/stages/native/: error_m.rs  error_n.rs  eval.rs  preamble.rs  query.rs
crates/ragu_pcd/src/proof/: builder.rs  components.rs  mod.rs
crates/ragu_pcd/src/step/: encoder.rs  mod.rs
crates/ragu_pcd/src/step/internal/: padded.rs
crates/ragu_pcd/tests/: proptest_fuse.rs  rerandomization.rs
crates/ragu_primitives/: Cargo.toml
crates/ragu_primitives/src/: allocator.rs  boolean.rs  comparison.rs  consistent.rs  element.rs  endoscalar.rs  foreign.rs  invertible.rs  io.rs  lib.rs  merkle.rs  point.rs  poseidon.rs  promotion.rs  simulator.rs  suffix.rs  util.rs  vec.rs
crates/ragu_testing/: Cargo.toml
crates/ragu_testing/fuzz/: Cargo.toml  fuzz.sh
crates/ragu_testing/src/: registry.rs
fv/docs/src/: SUMMARY.md
fv/lean/: Ragu.lean  lake-manifest.json  lakefile.lean
fv/lean/Ragu/: Core.lean
qa/fuzz/: Cargo.toml  README.md  fuzz.sh
qa/fuzz/fuzz_targets/: fuzz_circuit_witness.rs  fuzz_consistent.rs  fuzz_driver_metamorphic.rs  fuzz_endoscalar.rs  fuzz_point_identities.rs  fuzz_soundness_cheat.rs  fuzz_staging.rs  fuzz_sxy_agreement.rs  fuzz_verify_reject.rs  fuzz_witness_cheat.rs
qa/lean/: Ragu.lean  lake-manifest.json
qa/lean/Ragu/: Core.lean  EndoscalarProof.lean
qa/supply-chain/: audits.toml  config.toml
src/: application.rs  header.rs  lib.rs  polynomial.rs  relations.rs  step.rs
src/tests/: application.rs  polynomial.rs  relations.rs
(+158 files in other folders)
