[package]
name = "ragu"
version.workspace = true
authors.workspace = true
description = """
Proof-carrying data (PCD) framework for Rust
"""
license.workspace = true
edition.workspace = true
rust-version.workspace = true

readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/ragu"
categories = ["cryptography", "mathematics", "algorithms", "science", "no-std"]
keywords = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
all-features = true

[features]
default = ["multicore"]
multicore = [
  "ragu_arithmetic/multicore",
  "ragu_circuits/multicore",
  "ragu_pcd/multicore",
]
std = []

[lib]
bench = false

[dependencies]
ragu_core = { path = "crates/ragu_core", version = "0.0.0" }
ragu_circuits = { path = "crates/ragu_circuits", version = "0.0.0" }
ragu_arithmetic = { path = "crates/ragu_arithmetic", version = "0.0.0" }
ragu_primitives = { path = "crates/ragu_primitives", version = "0.0.0" }
ragu_pcd = { path = "crates/ragu_pcd", version = "0.0.0" }

[workspace]
members = [
  "crates/ragu_arithmetic",
  "crates/ragu_circuits",
  "crates/ragu_core",
  "crates/ragu_gadgets",
  "crates/ragu_macros",
  "crates/ragu_pasta",
  "crates/ragu_primitives",
  "crates/ragu_pcd",
  "crates/ragu_testing",
  "qa/crates/lean_extraction",
]

resolver = "2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[workspace.package]
version = "0.0.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.90"
repository = "https://github.com/tachyon-zcash/ragu"

[workspace.dependencies]
ff = { version = "0.14.0-pre.0", default-features = false }
group = { version = "0.14.0-pre.0", default-features = false }
pasta_curves = { version = "0.5.1", features = ["deferred"] }
rand = "0.10"
lazy_static = "1.5.0"
proptest = "1.7.0"
gungraun = "0.17.0"
blake2b_simd = "1.0"
maybe-rayon = { version = "0.1.1", default-features = false }
criterion = { version = "0.5", default-features = false }

# NOTE: `qa/fuzz/Cargo.toml` is its own workspace root
# (cargo-fuzz convention) and `[patch.crates-io]` does not propagate into
# nested workspaces. If you add, remove, or change any patch below, mirror
# the change in that file or fuzz builds will resolve different versions
# than the rest of the workspace.
[patch.crates-io]
# `zkcrypto/ff` branch `release-0.14.0` HEAD as of 2026-05-21.
# Speculative release branch for ff 0.14.0; merges PR #150 (bump
# `num-bigint`/`syn` and `addchain` to `0.3`), PR #151 (rename
# `try_from_rng` → `try_random`), and PR #149 (`rand_core 0.10`,
# MSRV 1.85). Pinned by rev since the branch is still moving.
ff = { git = "https://github.com/zkcrypto/ff", rev = "bdd74a3f75c4c378d69e954944a61bb0930532a0" }

# `ebfull/group` branch `release-0.14.0-with-rand-0.10-modulo-curveaffine`
# HEAD as of 2026-05-21. Forked from upstream `zkcrypto/group`
# `release-0.14.0` before the `CurveAffine` trait refactor (PR #48),
# so `pasta_curves` still compiles against the old
# `PrimeCurveAffine`/`CofactorCurveAffine` shape. Bumps `rand_core`
# to `0.10` and renames `Group::try_from_rng` → `Group::try_random`
# to match upstream ff PR #151.
group = { git = "https://github.com/ebfull/group", rev = "3a5c728f27700cf8767e926e2566d6c5cf1879ef" }

# `ebfull/pasta_curves` branch `ff-0.14-with-rand-0.10-and-deferred-redux`
# HEAD as of 2026-05-21. On top of upstream `zcash/pasta_curves`
# branch `ff-0.14` (which migrates to `ff`/`group` `0.14.0-pre.0`),
# adds a `rand 0.10` bump, deferred-reduction support (`DeferredField`
# trait + lazy Montgomery reduction via `Product` accumulator, PR #87
# from `alxiong/lazy-mont-red`), and renames `try_from_rng` →
# `try_random` to match upstream ff PR #151 and the corresponding
# rename on the `ebfull/group` fork.
pasta_curves = { git = "https://github.com/ebfull/pasta_curves", rev = "10fbf911b176854d8eafb58da1184f56f1b10944" }
