[package]
name = "ragu_arithmetic"
version.workspace = true
authors.workspace = true
description = """
Fundamental arithmetic traits and utilities for the Ragu project
"""
license.workspace = true
edition.workspace = true
rust-version.workspace = true

readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/ragu_arithmetic"
categories = ["cryptography", "mathematics", "algorithms", "science", "no-std"]
keywords = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
no-default-features = true
features = ["alloc", "modern-deps"]

[features]
alloc = []
default = ["alloc", "modern-deps"]
legacy-deps = [
  "dep:ff_legacy",
  "dep:group_legacy",
  "dep:pasta_curves_legacy",
  "dep:rand_legacy",
]
modern-deps = [
  "dep:ff_modern",
  "dep:group_modern",
  "dep:pasta_curves_modern",
  "dep:rand_modern",
]
multicore = ["maybe-rayon/threads", "std"]
std = []

[lib]
bench = false

[dependencies]
ff_modern = { workspace = true, optional = true }
group_modern = { workspace = true, optional = true }
pasta_curves_modern = { workspace = true, optional = true }
rand_modern = { workspace = true, optional = true }
ff_legacy = { workspace = true, optional = true }
group_legacy = { workspace = true, optional = true }
pasta_curves_legacy = { workspace = true, optional = true }
rand_legacy = { workspace = true, optional = true }
ragu_macros = { path = "../ragu_macros", version = "0.0.0" }
maybe-rayon = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
gungraun = { workspace = true }
criterion = { workspace = true }
ragu_testing = { path = "../ragu_testing", version = "0.0.0" }

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "msm_criterion"
path = "benches/criterion/msm.rs"
harness = false

[[bench]]
name = "fft_criterion"
path = "benches/criterion/fft.rs"
harness = false
