[package]
name = "ragu_circuits"
version.workspace = true
authors.workspace = true
description = """
Intended for internal use in the Ragu project
"""
license.workspace = true
edition.workspace = true
rust-version.workspace = true

readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/ragu_circuits"
categories = ["cryptography", "mathematics", "algorithms", "science", "no-std"]
keywords = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
no-default-features = true
features = ["alloc", "modern-deps"]

[features]
alloc = []
default = ["alloc", "modern-deps"]
legacy-deps = [
  "ragu_arithmetic/legacy-deps",
  "ragu_core/legacy-deps",
  "ragu_primitives/legacy-deps",
]
modern-deps = [
  "ragu_arithmetic/modern-deps",
  "ragu_core/modern-deps",
  "ragu_primitives/modern-deps",
]
multicore = ["maybe-rayon/threads", "ragu_arithmetic/multicore", "std"]
std = []

[lib]
bench = false

[dependencies]
ragu_arithmetic = { path = "../ragu_arithmetic", version = "0.0.0", default-features = false, features = ["alloc"] }
blake2b_simd = { workspace = true }
ragu_core = { path = "../ragu_core", version = "0.0.0", default-features = false, features = ["alloc"] }
ragu_primitives = { path = "../ragu_primitives", version = "0.0.0", default-features = false, features = ["alloc"] }
maybe-rayon = { workspace = true }

[dev-dependencies]
ff = { workspace = true }
group = { workspace = true }
pasta_curves = { workspace = true }
rand = { workspace = true }
proptest = { workspace = true }
gungraun = { workspace = true }
criterion = { workspace = true }
ragu_pasta = { path = "../ragu_pasta", version = "0.0.0", features = ["baked"] }
ragu_testing = { path = "../ragu_testing", version = "0.0.0" }

[[bench]]
name = "circuits"
harness = false

[[bench]]
name = "trace_criterion"
path = "benches/criterion/trace.rs"
harness = false
