[package]
name = "ragu_pasta"
version.workspace = true
authors.workspace = true
description = """
Pasta curve cycle public parameters for the Ragu project
"""
license.workspace = true
edition.workspace = true
rust-version.workspace = true

readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/ragu_pasta"
categories = ["cryptography", "mathematics", "algorithms", "science", "no-std"]
keywords = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
no-default-features = true
features = ["alloc", "baked", "modern-deps"]

[features]
alloc = []
default = ["alloc", "modern-deps"]
legacy-deps = ["ragu_arithmetic/legacy-deps"]
modern-deps = ["ragu_arithmetic/modern-deps"]
baked = ["lazy_static"]
std = []

[build-dependencies]
ragu_arithmetic = { path = "../ragu_arithmetic", version = "0.0.0", default-features = false, features = ["alloc"] }

[lib]
bench = false

[dependencies]
ragu_arithmetic = { path = "../ragu_arithmetic", version = "0.0.0", default-features = false, features = ["alloc"] }

lazy_static = { workspace = true, optional = true }
