[package]
name = "ragu_pcd"
version.workspace = true
authors.workspace = true
description = """
Intended for internal use in the Ragu project
"""
license.workspace = true
edition.workspace = true
rust-version.workspace = true

readme = "README.md"
repository.workspace = true
documentation = "https://docs.rs/ragu_pcd"
categories = [
  "cryptography",
  "mathematics",
  "algorithms",
  "development-tools",
  "no-std",
]
keywords = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
no-default-features = true
features = ["alloc", "modern-deps"]

[features]
alloc = []
default = ["alloc", "modern-deps"]
legacy-deps = [
  "ragu_arithmetic/legacy-deps",
  "ragu_circuits/legacy-deps",
  "ragu_core/legacy-deps",
  "ragu_primitives/legacy-deps",
]
modern-deps = [
  "ragu_arithmetic/modern-deps",
  "ragu_circuits/modern-deps",
  "ragu_core/modern-deps",
  "ragu_primitives/modern-deps",
]
multicore = ["maybe-rayon/threads", "ragu_arithmetic/multicore", "ragu_circuits/multicore", "std"]
std = []
# Exposes the `fuzz_utils` module, which provides proof-corruption helpers
# used by external fuzz harnesses. Not part of the stable public API.
unstable-fuzzing = []

[lib]
bench = false

[dependencies]
ragu_arithmetic = { path = "../ragu_arithmetic", version = "0.0.0", default-features = false, features = ["alloc"] }
maybe-rayon = { workspace = true }
ragu_circuits = { path = "../ragu_circuits", version = "0.0.0", default-features = false, features = ["alloc"] }
ragu_core = { path = "../ragu_core", version = "0.0.0", default-features = false, features = ["alloc"] }
ragu_primitives = { path = "../ragu_primitives", version = "0.0.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
ff = { workspace = true }
pasta_curves = { workspace = true }
rand = { workspace = true }
criterion = { workspace = true }
ragu_pasta = { path = "../ragu_pasta", version = "0.0.0", features = ["baked"] }
gungraun = { workspace = true }
ragu_testing = { path = "../ragu_testing", version = "0.0.0" }
proptest = { workspace = true }

[[bench]]
name = "pcd"
harness = false

[[bench]]
name = "fuse_criterion"
path = "benches/criterion/fuse.rs"
harness = false

[[bench]]
name = "registry_criterion"
path = "benches/criterion/registry.rs"
harness = false
